# schedule-2d-sat-sim

./: .envrc  .gitignore  LICENSE  README.md  coverage.yml  docker-compose.kafka.yml  docker-compose.yml  env.example  flake.nix  schedule-2d-sat-sim.cabal
.github/workflows/: cd.yml  ci.yml
app/: Main.hs
app/SatSim/: Config.hs
scripts/: format  server  test
src/SatSim/: AMQP.hs  Cache.hs  Gen.hs  PubSub.hs  Quantities.hs  Satellite.hs  Schedulable.hs  ScheduleRepository.hs  State.hs  TargetVector.hs
src/SatSim/Algo/: Greedy.hs
src/SatSim/Consumer/: AMQP.hs
src/SatSim/Core/: BatchStreamSource.hs  Consumer.hs  Producer.hs  ScheduleRepository.hs
src/SatSim/Producer/: AMQP.hs
test/SatSim/: CacheSpec.hs  GenSpec.hs  SchedulableSpec.hs  ScheduleRepositorySpec.hs  TargetVectorSpec.hs  TestLib.hs
test/SatSim/Algo/: GreedySpec.hs
test/SatSim/Consumer/: AMQPSpec.hs
test/SatSim/Core/: ConsumerSpec.hs  ScheduleRepositorySpec.hs
