cabal-version: 3.0
name: schedule-2d-sat-sim
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: James Santucci
maintainer: james.santucci@gmail.com
copyright: 2024
category: Game
build-type: Simple

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    SatSim.Algo.Greedy
    SatSim.Cache
    SatSim.Gen.Producer
    SatSim.Quantities
    SatSim.Satellite
    SatSim.Schedulable
    SatSim.State
    SatSim.TargetVector

  build-depends:
    aeson,
    async,
    base ^>=4.19,
    bytestring,
    conduit,
    hedis,
    hw-kafka-client,
    interval-index,
    random,
    semigroupoids,
    these,
    time,
    validation,

  hs-source-dirs: src
  default-language: Haskell2010

executable schedule-2d-sat-sim
  import: warnings
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base ^>=4.19,
    conduit,
    optparse-applicative,
    schedule-2d-sat-sim,

  hs-source-dirs: app
  default-language: Haskell2010

test-suite schedule-2d-sat-sim-test
  import: warnings
  default-language: Haskell2010
  other-modules:
    SatSim.Algo.GreedySpec
    SatSim.CacheSpec
    SatSim.Gen.ProducerSpec
    SatSim.SchedulableSpec
    SatSim.TargetVectorSpec

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    QuickCheck,
    base ^>=4.19,
    bytestring,
    hedis,
    hspec,
    interval-index,
    quickcheck-instances,
    schedule-2d-sat-sim,
    these,
    time,
    validation,
